# gm2artexamples

./: .gitignore  CMakeLists.txt  readme.doconly  readme.html
DataObjects/: CMakeLists.txt  MyHit.cc  MyHit.hh  MyLittleDatum.cc  MyLittleDatum.hh  MyLittleDatumCollection.hh  classes.h  classes_def.xml  readme.doconly
HelloWorld1/: CMakeLists.txt  HelloWorld1_module.cc
HitAndTrackObjects/: CMakeLists.txt  Hit.cpp  Hit.hh  HitCollection.hh  HitData.cpp  HitData.hh  HitDataCollection.hh  SimpleTrackData.hh  classes.h  classes_def.xml
Lesson1/: CMakeLists.txt  HelloWorld1_module.cc  HelloWorld2_module.cc  MyDatumReader_module.cc  ProduceMyLittleDatum_module.cc
Lesson2/: CMakeLists.txt  makeHits_module.cc  makeRotatedHits_module.cc  makeSimpleTracksFromNewHits_module.cc  makeSimpleTracksFromOldHits_module.cc  readHits_module.cc  readSimpleTracks_module.cc
docs/: CMakeLists.txt.html  DataObjects_CMakeLists.txt.html  DataObjects_MyLittleDatum.cc.html  DataObjects_MyLittleDatum.hh.html  DataObjects_MyLittleDatumCollection.hh.html  DataObjects_classes.h.html  DataObjects_classes_def.xml.html  HitAndTrackObjects_CMakeLists.txt.html  HitAndTrackObjects_Hit.cpp.html  HitAndTrackObjects_Hit.hh.html  HitAndTrackObjects_HitCollection.hh.html  HitAndTrackObjects_classes.h.html  HitAndTrackObjects_classes_def.xml.html  Lesson1_CMakeLists.txt.html  Lesson1_HelloWorld1_module.cc.html  Lesson1_HelloWorld2_module.cc.html  Lesson1_MyDatumReader_module.cc.html  Lesson1_ProduceMyLittleDatum_module.cc.html  Lesson2_CMakeLists.txt.html  Lesson2_makeHits_module.cc.html  Lesson2_readHits_module.cc.html  fcl_CMakeLists.txt.html  fcl_hello1.fcl.html  fcl_hello2.fcl.html  fcl_makeDatum.fcl.html  fcl_makeHits.fcl.html  fcl_messageservice.fcl.html  fcl_minimalMessageService.fcl.html  fcl_readDatum.fcl.html  fcl_readHits.fcl.html  index.html
docs/css/: docco.css  prettify.css
fcl/: CMakeLists.txt  hello1.fcl  hello2.fcl  makeAndReadDatum.fcl  makeAndReadTracksFromOldHits.fcl  makeDatum.fcl  makeHits.fcl  makeHitsRotated.fcl  makeTracksFromNewHits.fcl  makeTracksFromOldHits.fcl  messageservice.fcl  minimalMessageService.fcl  readDatum.fcl  readHits.fcl  readSimpleTracks.fcl
test/: CMakeLists.txt  MyLittleDatumAnalyzer_module.cc  MyLittleDatumProducer_module.cc  README  myLittleDatum_wr.sh  simple_test.cc  test.doconly  test.html  test_with_boost.cc  very_simple_test.sh
test/fcl/: MyLittleDatum_r.fcl  MyLittleDatum_test.fcl  MyLittleDatum_w.fcl  messageDefaults.fcl
ups/: CMakeLists.txt  gm2artexamples-config-version.cmake.in  gm2artexamples-config.cmake.in  gm2artexamples.table.in  product_deps  product_list  setup_for_development
